# prayers-bot

./: .gitignore  pyproject.toml
backend/: main.py
backend/api/routes/: prayers.py
backend/api/schemas/: message.py
backend/assistant/: assistant.py
backend/twitter/: tweet.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ErrorCard.tsx  Footer.tsx  Header.tsx  Logo.tsx  PrayerForm.tsx  SucessCard.tsx
